--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -638,7 +638,7 @@
                     <th class="px-4 py-3">Likes</th>
                     <th class="px-4 py-3">Status</th>
                     <th class="px-4 py-3">Last Updated</th>
-                    <th class="px-4 py-3">Delete</th>
+                    <!-- <th class="px-4 py-3">Delete</th> -->
 
                   </tr>
                 </thead>
