--- a/html/genre.html
+++ b/html/genre.html
@@ -84,16 +84,6 @@
                 <img class="h-8 w-8 rounded-full" id="pfp" src="" alt="">
               </button>
             </div>
-            <!--
-            Profile dropdown panel, show/hide based on dropdown state.
-  
-            Entering: "transition ease-out duration-100"
-              From: "transform opacity-0 scale-95"
-              To: "transform opacity-100 scale-100"
-            Leaving: "transition ease-in duration-75"
-              From: "transform opacity-100 scale-100"
-              To: "transform opacity-0 scale-95"
-          -->
             <div id="resultprofile"
               class="hidden z-40 origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg">
               <div class="py-1 rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical"
@@ -132,7 +122,8 @@
           class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
       </div>
     </div>
-    <script>document.getElementById('togglemebutton').onclick = function () {
+    <script>
+    document.getElementById('togglemebutton').onclick = function () {
         document.getElementById("resultnav").classList.toggle("hidden");
       }
   
@@ -146,7 +137,6 @@
       [...document.querySelectorAll('body')].forEach(el => {
         el.addEventListener('click', event => {
           if (event.target.parentElement.id !== "toggleprofile") {
-            console.log(event.target.parentElement.id)
             resultprofile.classList.add("hidden")
           } else {
             resultprofile.classList.toggle("hidden")
