--- a/html/only.html
+++ b/html/only.html
@@ -302,9 +302,9 @@
                     clip-rule="evenodd"></path>
                 </svg>
               </div>
-              <input
-                class="w-full pl-8 pr-2 text-sm text-gray-700 placeholder-gray-600 bg-gray-100 border-0 rounded-md dark:placeholder-gray-500 dark:focus:shadow-outline-gray dark:focus:placeholder-gray-600 dark:bg-gray-700 dark:text-gray-200 focus:placeholder-gray-500 focus:bg-white focus:border-cyan-300 focus:outline-none focus:shadow-outline-cyan form-input"
-                type="text" placeholder="Search for projects" aria-label="Search" />
+              <input id="searchBar"
+              class="w-full pl-8 pr-2 text-sm text-gray-700 placeholder-gray-600 bg-gray-100 border-0 rounded-md dark:placeholder-gray-500 dark:focus:shadow-outline-gray dark:focus:placeholder-gray-600 dark:bg-gray-700 dark:text-gray-200 focus:placeholder-gray-500 focus:bg-white focus:border-cyan-300 focus:outline-none focus:shadow-outline-cyan form-input"
+              type="text" placeholder="Search for series" aria-label="Search" />
             </div>
           </div>
           <ul class="flex items-center flex-shrink-0 space-x-6">
