--- a/html/creator.html
+++ b/html/creator.html
@@ -572,8 +572,8 @@
                         <h4 class=" mt-5 text-lg font-semibold text-black dark:text-gray-300 ">
                           Samples:
                         </h4>
-                        <section class="overflow-hidden text-gray-700 h-full">
-                          <div class="container px-5 py-2 mx-auto lg:pt-3 lg:px-4">
+                        <section class="overflow-hidden text-gray-700 w-fu">
+                          <div class="container px-5 py-2 mx-auto lg:pt-3 ">
                             <div class="flex flex-wrap -m-1 md:-m-2">
                               <div class="flex flex-wrap w-1/2 mx-auto">
                                 <div class="w-1/2 p-1 md:p-2 ">
