--- a/html/createad.html
+++ b/html/createad.html
@@ -448,11 +448,11 @@
 					<div>
 						<svg class="mb-4 h-20 w-20 text-green-500 mx-auto" viewBox="0 0 20 20" fill="currentColor">  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/></svg>
 
-						<h2 class="text-2xl mb-4 text-gray-800 text-center font-bold">Advertisement Success</h2>
+						<!-- <h2 class="text-2xl mb-4 text-gray-800 text-center font-bold">Advertisement Success</h2> -->
 
-						<div class="text-gray-600 mb-8">
+						<!-- <div class="text-gray-600 mb-8">
 							Thank you! We have sent you the receipt to sussy@test. Your ad will display on 6:00 to 15:00.
-						</div>
+						</div> -->
 
 						<button
 							@click="step = 1"
@@ -498,9 +498,8 @@
                             <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
                             <div class="relative max-w-sm mx-auto text-xs">
-                                <div class="bg-white rounded-md p-2 flex gap-1 flex-wrap" @click="$refs.search_input.focus()"
-                                    @click.outside="showSelector=false">
-                                    <template x-for="(name, id) in selected">
+                                <div class="bg-white rounded-md p-2 flex gap-1 flex-wrap">
+                                    <template >
                                         <div class="bg-blue-200 rounded-md flex items-center ">
                                             <div class="p-2" x-text="name"></div>
                                             <div @click="remove(id)"
