--- a/html/createad.html
+++ b/html/createad.html
@@ -799,6 +799,9 @@
     <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
     <script src="/js/init.js" type="module"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/dayjs@1.11.0/dayjs.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/dayjs@1.11.0/plugin/relativeTime.js"></script>
+    <script defer src="/js/notifications.js" type="module"></script>
     <script defer src="/js/advertisement.js" type="module"></script>
     <script>
 
