--- a/html/signup.html
+++ b/html/signup.html
@@ -18,7 +18,7 @@
               <div class="w-full p-8 ">
                   <h2 class="text-2xl font-semibold text-center bg-clip-text bg-gradient-to-r from-cyan-900 to-blue-500 text-transparent">YUME</h2>
                   <p class="text-xl text-gray-600 text-center">Begin Your Journey!!!</p>
-                  <a href="#" class="flex items-center justify-center mt-4 text-white rounded-lg shadow-md hover:bg-gray-100">
+                  <!-- <a href="#" class="flex items-center justify-center mt-4 text-white rounded-lg shadow-md hover:bg-gray-100">
                       <div class="px-4 py-3">
                           <svg class="h-6 w-6" viewBox="0 0 40 40">
                               <path d="M36.3425 16.7358H35V16.6667H20V23.3333H29.4192C28.045 27.2142 24.3525 30 20 30C14.4775 30 10 25.5225 10 20C10 14.4775 14.4775 9.99999 20 9.99999C22.5492 9.99999 24.8683 10.9617 26.6342 12.5325L31.3483 7.81833C28.3717 5.04416 24.39 3.33333 20 3.33333C10.7958 3.33333 3.33335 10.7958 3.33335 20C3.33335 29.2042 10.7958 36.6667 20 36.6667C29.2042 36.6667 36.6667 29.2042 36.6667 20C36.6667 18.8825 36.5517 17.7917 36.3425 16.7358Z" fill="#FFC107"/>
@@ -28,10 +28,10 @@
                           </svg>
                       </div>
                       <h1 class="px-4 py-3 w-5/6 text-center text-gray-600 font-bold">Sign up with Google</h1>
-                  </a>
+                  </a> -->
                   <div class="mt-4 flex items-center justify-between">
                       <span class="border-b w-1/5 lg:w-1/4 border-black"></span>
-                      <a class="text-xs text-center text-gray-500 uppercase">or make an account</a>
+                      <p class="text-xs text-center text-gray-500 uppercase">By signing up you confirm to our <a href="/tos">Terms of Service</a>, <a href="/pp">Privacy Policy</a> and that we will send a verification link to your email.</p>
                       <span class="border-b w-1/5 lg:w-1/4 border-black"></span>
                   </div>
                     <form class="mt-4">
