--- a/html/engagement.html
+++ b/html/engagement.html
@@ -462,7 +462,7 @@
                   aria-label="submenu">
                   <li class="flex">
                     <a class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                      href="#">
+                      href="/account">
                       <svg class="w-4 h-4 mr-3" aria-hidden="true" fill="none" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                         <path d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
@@ -472,7 +472,7 @@
                   </li>
                   <li class="flex">
                     <a class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                      href="#">
+                      href="/dashboard/creator">
                       <svg class="w-4 h-4 mr-3" aria-hidden="true" fill="none" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                         <path
@@ -481,18 +481,6 @@
                         <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
                       </svg>
                       <span>Settings</span>
-                    </a>
-                  </li>
-                  <li class="flex">
-                    <a class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                      href="#">
-                      <svg class="w-4 h-4 mr-3" aria-hidden="true" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                        <path
-                          d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1">
-                        </path>
-                      </svg>
-                      <span>Log out</span>
                     </a>
                   </li>
                 </ul>
@@ -707,7 +695,7 @@
                     <p class="text-base text-body-color leading-relaxed mb-7">
                       Want to reach more people? Advertise your series on our platform at an affordable pricing.
                     </p>
-                    <a href="/advertisement/create" class="
+                    <a href="#" class="
                     inline-block
                     py-2
                     px-7
@@ -718,7 +706,7 @@
                     hover:border-primary hover:bg-primary hover:text-white
                     transition capitalize
                     ">
-                      enter
+                      Coming soon
                     </a>
                   </div>
                 </div>
@@ -727,7 +715,7 @@
                 <div class="bg-yellow-400 rounded-xl overflow-hidden mb-10 flex flex-col ">
                   <div class="p-8 sm:p-9 md:p-7 xl:p-9 text-center">
                     <h3>
-                      <a href="javascript:void(0)" class="
+                      <a class="
                        font-semibold
                        text-dark text-xl
                        sm:text-[22px]
@@ -746,7 +734,7 @@
                     <p class="text-base text-body-color leading-relaxed mb-7">
                       Already advertised with us or have a pending advertisement? Check your status here.
                     </p>
-                    <a href="/advertisement/list" class="
+                    <a href="#" class="
                     inline-block
                     py-2
                     px-7
@@ -757,7 +745,7 @@
                     hover:border-primary hover:bg-primary hover:text-white
                     transition capitalize
                     ">
-                      enter
+                      Coming soon
                     </a>
                   </div>
                 </div>
@@ -766,7 +754,7 @@
                 <div class="bg-orange-300 rounded-xl overflow-hidden  flex flex-col ">
                   <div class="p-8 sm:p-9 md:p-7 xl:p-9 text-center">
                     <h3>
-                      <a href="javascript:void(0)" class="
+                      <a class="
                        font-semibold
                        text-dark text-xl
                        sm:text-[22px]
