--- a/html/write.html
+++ b/html/write.html
@@ -30,32 +30,10 @@
   </div>
   <div class="grid gap-4 items-center mt-4 justify-center">
     <button id="btnSaveDraft" class="rounded-full bg-blue-500 px-2 py-1 mx-auto text-gray-200 text-xl hover:bg-blue-600 font-bold">Save Draft</button>
+    <button id="btnSaveChanges" class="rounded-full bg-blue-500 px-2 py-1 mx-auto text-gray-200 text-xl hover:bg-blue-600 font-bold">Save Changes</button>
     <button id="btnPublish" class="rounded-full bg-red-500 px-3 py-1 mx-auto text-gray-200 text-xl hover:bg-red-600 font-bold">Publish</button>
  
    </div>
- 
-   <!-- <template id="my-template">
-    <swal-title>
-      Save changes to "Untitled 1" before closing?
-    </swal-title>
-    <swal-icon type="warning" color="red"></swal-icon>
-    <swal-button type="confirm">
-      Save As
-    </swal-button>
-    <swal-button type="cancel">
-      Cancel
-    </swal-button>
-    <swal-button type="deny">
-      Close without Saving
-    </swal-button>
-    <swal-param name="allowEscapeKey" value="false" />
-    <swal-param
-      name="customClass"
-      value='{ "popup": "my-popup" }' />
-    </template> -->
-
-
-
 
   <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
