--- a/html/account.html
+++ b/html/account.html
@@ -370,7 +370,7 @@
                     <img id="banner" src="" alt="" class="w-full h-full object-cover rounded absolute shadow" />
                     <div class="absolute bg-black opacity-50 top-0 right-0 bottom-0 left-0 rounded"></div>
                     <div class="flex items-center px-3 py-2 rounded absolute right-0 mr-4 mt-4 cursor-pointer">
-                      <label for="bannerImage" class="relative cursor-pointer flex">
+                      <label for="bannerImage" class="relative cursor-pointer flex" id="bannerImageLabel">
                         <p class="text-xs text-gray-100">Change Cover Photo</p>
                         <div class="ml-2 text-gray-100">
                           <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/simple_form-svg1.svg" alt="Edit">
@@ -612,7 +612,7 @@
       </main>
     </div>
   </div>
-  <script defer>
+  <!-- <script defer>
     document.getElementById('togglemebutton').onclick = function () {
       document.getElementById("resultnav").classList.toggle("hidden");
     }
@@ -628,7 +628,7 @@
         }
       })
     })
-</script>
+</script> -->
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
   <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
