--- a/html/engagement.html
+++ b/html/engagement.html
@@ -507,7 +507,8 @@
           font-medium
           hover:border-primary hover:bg-primary shadow-md hover:shadow-cyan-400
           transition capitalize
-          text-white">
+          dark:text-white
+          text-black">
 
             <span>
               <div id="goToProfile" class="flex w-fit">
