--- a/html/signin.html
+++ b/html/signin.html
@@ -14,9 +14,9 @@
 <body class="" >
     <div class="bg-white h-screen flex items-center justify-center ">
         <div class="flex bg-white rounded-lg shadow-lg overflow-hidden  max-w-sm lg:max-w-4xl flex-auto shadow-cyan-500 ">
-              <div class="hidden lg:block lg:w-1/2 bg-cover" style="background-image:url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanimeukiyo.com%2Fwp-content%2Fuploads%2F2020%2F12%2Fplot.jpg&f=1&nofb=1')"></div>
+              <div class="hidden lg:block lg:w-1/2 bg-cover" style="background-image:url('https://cdn.dribbble.com/users/913447/screenshots/7048312/media/f557ea33c2f8189721e726c36e00df08.jpg?compress=1&resize=1200x900&vertical=top')"></div>
               <div class="w-full p-8 lg:w-1/2">
-                  <h2 class="text-2xl font-semibold text-center text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-blue-500">YUME</h2>
+                  <a href="/"><h2 class="text-2xl font-semibold text-center text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-blue-500">YUME</h2></a>
                   <p class="text-xl text-gray-600 text-center">Enter The New Realm!</p>
                   <!-- <a href="#" class="flex items-center justify-center mt-4 text-white rounded-lg shadow-md shadow-green-100 hover:bg-gray-100">
                       <div class="px-4 py-3">
