--- a/html/glist.html
+++ b/html/glist.html
@@ -185,7 +185,7 @@
     <main class="my-8">
         <div class="container mx-auto px-6">
 
-            <main class="my-8">
+            <main class="mt-8">
                   <div class="container mx-auto px-6">
                       <div id="genresContainer" class="grid grid-cols-5 gap-3 mx-auto"></div>
                   </div>
@@ -198,14 +198,15 @@
 
         </div>
     </main>
-
-    <footer class="bg-gray-200 bottom-0 absolute w-screen">
-        <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <a href="#" class="text-xl font-bold text-gray-500 hover:text-gray-400">Brand</a>
-            <p class="py-2 text-gray-500 sm:py-0">All rights reserved</p>
-        </div>
-    </footer>
 </div>
+<footer class="bg-gray-200 bottom-0  w-screen">
+  <div class="container mx-auto px-6 py-3 flex justify-between items-center">
+      <a href="/" class="text-xl font-bold text-gray-500 hover:text-gray-400">YUME.</a>
+      <p class="py-2 text-gray-500 sm:py-0">All rights reserved</p>
+  </div>
+</footer>
+
+
 
       <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
       <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
